<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunchBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkbox_kosher">Kosher</string>
    <string name="checkbox_muslim">Muslim</string>
    <string name="checkbox_hindu">Hindu</string>
    <string name="checkbox_vegetarian">Vegetarian</string>
    <string name="checkbox_diabetic">Diabetic</string>
    <string name="checkbox_gluten_free">Gluten-Free</string>
    <string name="button_pack_lunch">Pack Lunch</string>
    <string name="title_activity_lunch_summary">LunchSummaryActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="button_login">Login</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_username_hint">Username</string>

</resources>
